[package]
name = "rshddt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false }
clap = { version = "4.3.11", features = ["derive"] }
libosu = { version = "0.0.28", default-features = false }
